frontend/frontend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontend-secret
          image: cgamel/p7-frontend:7de09b6e
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment-service
  namespace: frontend-deployment
spec:
  selector:
    app: frontend-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-deployment-ingress
  namespace: frontend-deployment
spec:
  rules:
    - host: frontend-deployment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-deployment-service
                port:
                    number: 3000  # Expose through the service port (3000)
